Resolved console warning